--- a/android-cantonese/AndroidManifest.xml
+++ b/android-cantonese/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.reecedunn.espeak"
-    android:versionCode="20"
-    android:versionName="1.52-dev" >
+    package="net.eguidedog.ekho">
 
     <uses-feature
         android:name="android.hardware.touchscreen"
