--- a/android-cantonese/EkhoTests/AndroidManifest.xml
+++ b/android-cantonese/EkhoTests/AndroidManifest.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.reecedunn.espeak.test"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    package="com.eguidedog.ekho.test">
 
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="com.reecedunn.espeak" />
+        android:targetPackage="net.eguidedog.ekho" />
 
     <application
         android:icon="@drawable/ic_launcher"
