--- a/android-cantonese/build.gradle
+++ b/android-cantonese/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     androidTestImplementation 'org.hamcrest:hamcrest-all:1.3'
 }
 
+/*
 tasks.register('checkData') {
     doFirst {
         assert file("../espeak-ng-data/en_dict").exists()
@@ -62,16 +63,16 @@ tasks.register('createDataVersion', Copy) {
     into file("./res/raw")
 }
 preBuild.dependsOn createDataVersion
-
+*/
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 32
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 26
-        versionCode 22
-        versionName "1.52-dev"
+        targetSdkVersion 32
+        versionCode 40
+        versionName "4.0"
     }
 
     externalNativeBuild {
@@ -86,9 +87,9 @@ android {
             java.srcDirs = ['src']
             res.srcDirs = ['res']
         }
-        androidTest.setRoot('eSpeakTests')
+        androidTest.setRoot('EkhoTests')
         androidTest {
-            java.srcDirs = ['eSpeakTests/src']
+            java.srcDirs = ['EkhoTests/src']
         }
     }
 
