--- a/Makefile.am
+++ b/Makefile.am
@@ -31,10 +31,7 @@ test_ekho_LDADD = libekho.a $(LIBEKHO_LIB) #$(srcdir)/libmusicxml/libmusicxml2.a
 
 DATA_DIR = $(srcdir)/ekho-data
 DATA_FILES = $(DATA_DIR)/zhy_list $(DATA_DIR)/zh_list $(DATA_DIR)/zh_listx $(DATA_DIR)/zh_patch $(DATA_DIR)/zhy.dict $(DATA_DIR)/zh.dict $(DATA_DIR)/ka_list $(DATA_DIR)/bo_list $(DATA_DIR)/ko_list $(DATA_DIR)/ngangien_list $(DATA_DIR)/pinyin.index $(DATA_DIR)/pinyin.voice $(DATA_DIR)/jyutping.index $(DATA_DIR)/jyutping.voice $(DATA_DIR)/toisanese_list
-DATA_SUB_DIRS = $(DATA_DIR)/alphabet $(DATA_DIR)/hakka $(DATA_DIR)/tibetan $(DATA_DIR)/ngangien $(DATA_DIR)/hangul $(DATA_DIR)/toisanese $(DATA_DIR)/pinyin
-
-COPYRIGHT_FILES = $(DATA_DIR)/COPYING-cantonese-wong
-EXTRA_DIST = $(COPTRIGHT_FILES) # this line seems no longer work. don't know why
+DATA_SUB_DIRS = $(DATA_DIR)/alphabet $(DATA_DIR)/hakka $(DATA_DIR)/tibetan $(DATA_DIR)/ngangien $(DATA_DIR)/hangul $(DATA_DIR)/toisanese $(DATA_DIR)/pinyin $(DATA_DIR)/jyutping
 
 $(srcdir)/libmusicxml/libmusicxml2.a:
 	cd $(srcdir)/libmusicxml/linux && make
@@ -58,7 +55,6 @@ if DIST_VOICE_DATA
 endif
 	cp $(srcdir)/collect_ekho_logs.sh $(distdir)/
 	cp $(DATA_FILES) $(distdir)/ekho-data/
-	cp $(COPYRIGHT_FILES) $(distdir)/ekho-data/
 #	if [ -e $(srcdir)/ekho-data/festival/lib/voices/spanish ]; then mv $(srcdir)/ekho-data/festival/lib/voices/spanish $(srcdir)/ekho-data/; fi
 #	cp -R $(srcdir)/ekho-data/festival $(distdir)/ekho-data/
 #	if [ -e $(srcdir)/ekho-data/spanish ]; then mv $(srcdir)/ekho-data/spanish $(srcdir)/ekho-data/festival/lib/voices/; fi
